[package]
name = "ptrace"
version = "0.1.0"
authors = ["Torrie Fischer <torrie@ripple.com>"]
description = "Rust bindings for the POSIX ptrace API"
repository = "http://github.com/codius/rust-ptrace"
license = "MIT"
readme = "README.md"

[lib]
name = "ptrace"

[dependencies]
bitflags = "0.1"
posix-ipc = "0.0"
