[package]
name = "ptrace"
version = "0.1.0"
authors = ["Torrie Fischer <torrie@ripple.com>"]
description = "Rust bindings for the POSIX ptrace API"
repository = "http://github.com/codius/rust-ptrace"
license = "MIT"
readme = "README.md"

[lib]
name = "ptrace"

[dependencies]
bitflags = "0.1"
nix = "0.9"
num = "0.1.24"
enum_primitive = "0.0.2"
libc = "0.1.7"
